syntax = "proto3";

package envoy.extensions.load_balancing_policies.cluster_provided.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.load_balancing_policies.cluster_provided.v3";
option java_outer_classname = "ClusterProvidedProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/load_balancing_policies/cluster_provided/v3;cluster_providedv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Cluster Provided Load Balancing Policy]
// [#extension: envoy.load_balancing_policies.cluster_provided]

// The cluster provided load balancing policy allows cluster to specify its own load balancing.
// If this extension is configured, the target cluster must provide load balancer when the cluster
// is created.
//
// .. note::
//   Cluster provided load balancing policy could not be used as sub-policy of other hierarchical
//   load balancing policies, such as subset load balancing policy.
message ClusterProvided {
}
